[fix]: Z-Index

--- a/css/emails.css
+++ b/css/emails.css
@@ -26,6 +26,7 @@ main>div {
 
 header{
 	position: fixed;
+	z-index: 999;
 	left: 50%;
 	transform: translateX(-50%);
 	width: 90%;
